force-app/main/default/objects/Account/fields/Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Account_Number__c</fullName>
    <description>Account number assigned to this account (not the unique, system-generated ID assigned during creation). Maximum size is 40 characters.</description>
    <formula>CASESAFEID(Id)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Account number assigned to this account (not the unique, system-generated ID assigned during creation). Maximum size is 40 characters.</inlineHelpText>
    <label>Account Number</label>
    <type>Text</type>
</CustomField>