force-app/main/default/objects/Account/fields/AccountAddressKey__c.field-meta.xml
<CustomField>
    <fullName>AccountAddressKey__c</fullName>
    <formula>SUBSTITUTE(TEXT(ShippingCountryCode),&apos; &apos;,&apos;&apos;) + SUBSTITUTE(ShippingStreet,&apos; &apos;,&apos;&apos;) + SUBSTITUTE(ShippingCity,&apos; &apos;,&apos;&apos;) + SUBSTITUTE(TEXT(ShippingStateCode),&apos; &apos;,&apos;&apos;) + SUBSTITUTE(ShippingPostalCode,&apos; &apos;,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AccountAddressKey</label>
    <type>Text</type>
</CustomField>