force-app/main/default/objects/Account/fields/AMLReviewDate__c.field-meta.xml
<CustomField>
    <fullName>AMLReviewDate__c</fullName>
    <label>AML Date</label>
    <type>DateTime</type>
</CustomField>