force-app/main/default/objects/Account/fields/AVA_MAPPER__Is_Seller_Importer_Of_Record__c.field-meta.xml
<CustomField>
    <fullName>AVA_MAPPER__Is_Seller_Importer_Of_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If checked, Seller is responsible for any import taxes and fees.</description>
    <inlineHelpText>If checked, Seller is responsible for any import taxes and fees.</inlineHelpText>
    <label>Is Seller Importer Of Record</label>
    <type>Checkbox</type>
</CustomField>