force-app/main/default/objects/Account/fields/AVA_SFCLOUD__AvaTax_Message__c.field-meta.xml
<CustomField>
    <fullName>AVA_SFCLOUD__AvaTax_Message__c</fullName>
    <description>Displays the AvaTax responses or messages.</description>
    <inlineHelpText>Displays the AvaTax responses or messages.</inlineHelpText>
    <label>AvaTax Message</label>
    <type>TextArea</type>
</CustomField>