force-app/main/default/objects/Account/fields/AvailableCredit__c.field-meta.xml
<CustomField>
    <fullName>AvailableCredit__c</fullName>
    <label>Available Credit</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>