force-app/main/default/objects/Account/fields/Bad_Credit_Returned_Check__c.field-meta.xml
<CustomField>
    <fullName>Bad_Credit_Returned_Check__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bad Credit/Returned Check</label>
    <type>Checkbox</type>
</CustomField>