force-app/main/default/objects/Account/fields/Bead_Buying_Group__c.field-meta.xml
<CustomField>
    <fullName>Bead_Buying_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bead Buying Group</label>
    <type>Checkbox</type>
</CustomField>