force-app/main/default/objects/Account/fields/BirthMoDay__c.field-meta.xml
<CustomField>
    <fullName>BirthMoDay__c</fullName>
    <inlineHelpText>Please enter the date in MMDD format only.</inlineHelpText>
    <label>Birthday</label>
    <length>4</length>
    <type>Text</type>
</CustomField>