force-app/main/default/objects/Account/fields/Catalog_Delivery__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Delivery__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Catalog Delivery</label>
    <type>Checkbox</type>
</CustomField>