force-app/main/default/objects/Account/fields/Catalog_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Delivery_Date__c</fullName>
    <label>Catalog Delivery Date</label>
    <type>DateTime</type>
</CustomField>