force-app/main/default/objects/Account/fields/Catalog_mailed__c.field-meta.xml
<CustomField>
    <fullName>Catalog_mailed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Catalog Mailed</label>
    <type>Checkbox</type>
</CustomField>