force-app/main/default/objects/Account/fields/Catalog_mailed_Date__c.field-meta.xml
<CustomField>
    <fullName>Catalog_mailed_Date__c</fullName>
    <label>Catalog mailed Date</label>
    <type>Date</type>
</CustomField>