force-app/main/default/objects/Account/fields/Catalog_Mailed_Date_from_Marketing_Clo__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Mailed_Date_from_Marketing_Clo__c</fullName>
    <label>In-Home Date</label>
    <type>DateTime</type>
</CustomField>