force-app/main/default/objects/Account/fields/Catalog_Request_Date__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Request_Date__c</fullName>
    <label>Catalog Request In-Home Date</label>
    <type>Date</type>
</CustomField>