force-app/main/default/objects/Account/fields/Catalog_Requested__c.field-meta.xml
<CustomField>
    <fullName>Catalog_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Catalog Requested</label>
    <type>Checkbox</type>
</CustomField>