force-app/main/default/objects/Account/fields/CustType__c.field-meta.xml
<CustomField>
    <fullName>CustType__c</fullName>
    <label>Customer Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>CUSTOMERS</fullName>
                <default>true</default>
                <label>CUSTOMERS</label>
            </value>
            <value>
                <fullName>DECEASED</fullName>
            </value>
            <value>
                <fullName>EX-PLATINUM</fullName>
            </value>
            <value>
                <fullName>PLAT 4 STAR</fullName>
            </value>
            <value>
                <fullName>T PLATINUM P4</fullName>
            </value>
            <value>
                <fullName>INMATES INACTIVE</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>