force-app/main/default/objects/Account/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <label>Discount %</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>P4</fullName>
            </value>
            <value>
                <fullName>5%</fullName>
            </value>
            <value>
                <fullName>10%</fullName>
            </value>
            <value>
                <fullName>15%</fullName>
            </value>
            <value>
                <fullName>25%</fullName>
                <isActive>false</isActive>
                <label>25%</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>