force-app/main/default/objects/Account/fields/Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>Discount_Level__c</fullName>
    <label>Discount Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>3 Star</fullName>
            </value>
            <value>
                <fullName>4 Star</fullName>
            </value>
            <value>
                <fullName>5 Star</fullName>
            </value>
            <value>
                <fullName>P4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>