force-app/main/default/objects/Account/fields/Do_Not_Promote__c.field-meta.xml
<CustomField>
    <fullName>Do_Not_Promote__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Do Not Promote</label>
    <type>Checkbox</type>
</CustomField>