force-app/main/default/objects/Account/fields/DOX__Email__c.field-meta.xml
<CustomField>
    <fullName>DOX__Email__c</fullName>
    <label>Email</label>
    <length>255</length>
    <type>Text</type>
</CustomField>