force-app/main/default/objects/Account/fields/EmailAcquiredDate__c.field-meta.xml
<CustomField>
    <fullName>EmailAcquiredDate__c</fullName>
    <label>Email Date</label>
    <type>DateTime</type>
</CustomField>