force-app/main/default/objects/Account/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Employee</label>
    <type>Checkbox</type>
</CustomField>