force-app/main/default/objects/Account/fields/Exclude_From_Platinum__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Platinum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Platinum</label>
    <type>Checkbox</type>
</CustomField>