force-app/main/default/objects/Account/fields/Fed_Ex_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Fed_Ex_Account_Number__c</fullName>
    <label>Fed Ex Account Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>