force-app/main/default/objects/Account/fields/FirstOrderDate__c.field-meta.xml
<CustomField>
    <fullName>FirstOrderDate__c</fullName>
    <label>First Order Date</label>
    <type>Date</type>
</CustomField>