force-app/main/default/objects/Account/fields/Formula_post_platinum__c.field-meta.xml
<CustomField>
    <fullName>Formula_post_platinum__c</fullName>
    <formula>Post_Platinum__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Post Platinum</label>
    <type>Checkbox</type>
</CustomField>