force-app/main/default/objects/Account/fields/Freight_Forwarder__c.field-meta.xml
<CustomField>
    <fullName>Freight_Forwarder__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the customer use a freight forwarder?</description>
    <label>Freight Forwarder</label>
    <type>Checkbox</type>
</CustomField>