force-app/main/default/objects/Account/fields/GSK__c.field-meta.xml
<CustomField>
    <fullName>GSK__c</fullName>
    <label>GSK</label>
    <length>10</length>
    <type>Text</type>
</CustomField>