force-app/main/default/objects/Account/fields/GSK_Customers__c.field-meta.xml
<CustomField>
    <fullName>GSK_Customers__c</fullName>
    <formula>IF( GSK__c !=null, true , false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GSK Customer</label>
    <type>Checkbox</type>
</CustomField>