force-app/main/default/objects/Account/fields/Home_Phone_Formula__c.field-meta.xml
<CustomField>
    <fullName>Home_Phone_Formula__c</fullName>
    <formula>PersonHomePhone</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Home Phone Formula</label>
    <type>Text</type>
</CustomField>