force-app/main/default/objects/Account/fields/Inmate__c.field-meta.xml
<CustomField>
    <fullName>Inmate__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Inmate</label>
    <type>Checkbox</type>
</CustomField>