force-app/main/default/objects/Account/fields/Legacy_As_Of_Date__c.field-meta.xml
<CustomField>
    <fullName>Legacy_As_Of_Date__c</fullName>
    <description>Legacy Order information extends through this date.</description>
    <inlineHelpText>Legacy Order information extends through this date.</inlineHelpText>
    <label>Legacy As-Of Date</label>
    <type>Date</type>
</CustomField>