force-app/main/default/objects/Account/fields/Legacy_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Customer_Number__c</fullName>
    <externalId>true</externalId>
    <label>Legacy Customer Number</label>
    <length>10</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>