force-app/main/default/objects/Account/fields/Legacy_Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Lifetime__c</fullName>
    <label>Legacy Lifetime $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>