force-app/main/default/objects/Account/fields/Legacy_Lifetime_with_GC__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Lifetime_with_GC__c</fullName>
    <label>Legacy Lifetime with GC $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>