force-app/main/default/objects/Account/fields/Life_Time_Order_Count__c.field-meta.xml
<CustomField>
    <fullName>Life_Time_Order_Count__c</fullName>
    <label>Life Time Order Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>