force-app/main/default/objects/Account/fields/Lifetime__c.field-meta.xml
<CustomField>
    <fullName>Lifetime__c</fullName>
    <formula>PerfLTSAmt__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>