force-app/main/default/objects/Account/fields/Move_Down__c.field-meta.xml
<CustomField>
    <fullName>Move_Down__c</fullName>
    <formula>if( Previous_Discount_Level__c ==&apos;5 Star&apos; &amp;&amp; (TEXT( Discount_Level__c )==&apos;4 Star&apos; || TEXT( Discount_Level__c )==&apos;3 Star&apos;),&apos;YES&apos;,if(Previous_Discount_Level__c ==&apos;4 Star&apos; &amp;&amp; TEXT( Discount_Level__c )==&apos;3 Star&apos;,&apos;YES&apos;,&apos;NO&apos;))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Move Down</label>
    <type>Text</type>
</CustomField>