force-app/main/default/objects/Account/fields/Next_84th_Day__c.field-meta.xml
<CustomField>
    <fullName>Next_84th_Day__c</fullName>
    <label>Next 84th Day</label>
    <type>DateTime</type>
</CustomField>