force-app/main/default/objects/Account/fields/NumOrdsLTS__c.field-meta.xml
<CustomField>
    <fullName>NumOrdsLTS__c</fullName>
    <formula>of_Legacy_Lifetime_Orders__c + Life_Time_Order_Count__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label># of Lifetime Orders</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>