force-app/main/default/objects/Account/fields/of_Legacy_Lifetime_Orders__c.field-meta.xml
<CustomField>
    <fullName>of_Legacy_Lifetime_Orders__c</fullName>
    <label># of Legacy Lifetime Orders</label>
    <precision>6</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>