force-app/main/default/objects/Account/fields/Offer_Code__c.field-meta.xml
<CustomField>
    <fullName>Offer_Code__c</fullName>
    <label>Last Catalog Mailed</label>
    <length>255</length>
    <type>Text</type>
</CustomField>