force-app/main/default/objects/Account/fields/OMS_Short_Name__c.field-meta.xml
<CustomField>
    <fullName>OMS_Short_Name__c</fullName>
    <label>OMS Short Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>04 PRIOR PROSP</fullName>
            </value>
            <value>
                <fullName>06 PLAT INQ PROSP 4T</fullName>
            </value>
            <value>
                <fullName>07 PLAT FMG PROSP 4T</fullName>
            </value>
            <value>
                <fullName>08 PLAT FMG PROSP</fullName>
            </value>
            <value>
                <fullName>09 PLAT INQ PROSP</fullName>
            </value>
            <value>
                <fullName>79 PROSP BDSHP TIER4</fullName>
            </value>
            <value>
                <fullName>71 POST PLAT 4TH TIER</fullName>
            </value>
            <value>
                <fullName>80 BEADSHOP 3</fullName>
            </value>
            <value>
                <fullName>81 BEADSHOP 4</fullName>
            </value>
            <value>
                <fullName>82 BEADSHOP 5</fullName>
            </value>
            <value>
                <fullName>72 PLAT 5 STAR PLUS</fullName>
            </value>
            <value>
                <fullName>75 PLAT 5 STAR</fullName>
            </value>
            <value>
                <fullName>76 PLAT 4 STAR</fullName>
            </value>
            <value>
                <fullName>85 PLAT 3 STAR</fullName>
            </value>
            <value>
                <fullName>60 BEADBUY 3</fullName>
            </value>
            <value>
                <fullName>61 BEADBUY 4</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>