force-app/main/default/objects/Account/fields/openAccountChequeNumber__c.field-meta.xml
<CustomField>
    <fullName>openAccountChequeNumber__c</fullName>
    <label>OpenAccountChequeNumber</label>
    <length>50</length>
    <type>Text</type>
</CustomField>