force-app/main/default/objects/Account/fields/Order_Screen_Link__c.field-meta.xml
<CustomField>
    <fullName>Order_Screen_Link__c</fullName>
    <formula>HYPERLINK(&quot;https://firemountaingems.lightning.force.com/lightning/r/Order/&quot;&amp;Id&amp;&quot;/related/Orders/view&quot;, &quot;Order list&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Order Screen Link</label>
    <type>Text</type>
</CustomField>