force-app/main/default/objects/Account/fields/OrigNonP4Date__c.field-meta.xml
<CustomField>
    <fullName>OrigNonP4Date__c</fullName>
    <label>Platinum Prospect Date</label>
    <type>DateTime</type>
</CustomField>