force-app/main/default/objects/Account/fields/P4_Date__c.field-meta.xml
<CustomField>
    <fullName>P4_Date__c</fullName>
    <label>P4 Date</label>
    <type>DateTime</type>
</CustomField>