force-app/main/default/objects/Account/fields/P4_Discount__c.field-meta.xml
<CustomField>
    <fullName>P4_Discount__c</fullName>
    <label>P4 Discount</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Percent</type>
</CustomField>