force-app/main/default/objects/Account/fields/Perf365Days__c.field-meta.xml
<CustomField>
    <fullName>Perf365Days__c</fullName>
    <label>365 Days $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>