force-app/main/default/objects/Account/fields/PerfAvgLast3MosAmt__c.field-meta.xml
<CustomField>
    <fullName>PerfAvgLast3MosAmt__c</fullName>
    <label>PerfAvgLast3MosAmt</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>