force-app/main/default/objects/Account/fields/PerfCurrPeriodAmt__c.field-meta.xml
<CustomField>
    <fullName>PerfCurrPeriodAmt__c</fullName>
    <label>Period Plan $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>