force-app/main/default/objects/Account/fields/PerfLTSAmt__c.field-meta.xml
<CustomField>
    <fullName>PerfLTSAmt__c</fullName>
    <formula>Legacy_Lifetime__c + Total_Orders_Amount__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Lifetime $</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>