force-app/main/default/objects/Account/fields/PerfPlanTotalAmt__c.field-meta.xml
<CustomField>
    <fullName>PerfPlanTotalAmt__c</fullName>
    <label>Platinum Total Program $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>