force-app/main/default/objects/Account/fields/Person_Email__c.field-meta.xml
<CustomField>
    <fullName>Person_Email__c</fullName>
    <formula>PersonEmail</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Email</label>
    <type>Text</type>
</CustomField>