force-app/main/default/objects/Account/fields/Persona__c.field-meta.xml
<CustomField>
    <fullName>Persona__c</fullName>
    <label>Persona</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Make Jewelry</fullName>
            </value>
            <value>
                <fullName>Sells Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>