force-app/main/default/objects/Account/fields/Persona_Code__c.field-meta.xml
<CustomField>
    <fullName>Persona_Code__c</fullName>
    <label>Persona Code</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Persona__c</controllingField>
        <valueSetDefinition>
            <value>
                <fullName>Make Jewelry</fullName>
            </value>
            <value>
                <fullName>Sells Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>