force-app/main/default/objects/Account/fields/PlatAnniversaryDate__c.field-meta.xml
<CustomField>
    <fullName>PlatAnniversaryDate__c</fullName>
    <label>Platinum Anniversary Date</label>
    <type>Date</type>
</CustomField>