force-app/main/default/objects/Account/fields/Platinum_3_Tier_Age__c.field-meta.xml
<CustomField>
    <fullName>Platinum_3_Tier_Age__c</fullName>
    <formula>NOW() -   Star_Level_3_Reached_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platinum 3 Tier Age</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>