force-app/main/default/objects/Account/fields/Platinum_Catalog_Requested__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Catalog_Requested__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Platinum Catalog Requested</label>
    <type>Checkbox</type>
</CustomField>