force-app/main/default/objects/Account/fields/Platinum_Customer_Reference_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Customer_Reference_Due_Date__c</fullName>
    <formula>TODAY()</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platinum Customer Reference Due Date</label>
    <type>Date</type>
</CustomField>