force-app/main/default/objects/Account/fields/Platinum_Prospect__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Prospect__c</fullName>
    <label>Platinum Prospect</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>General</fullName>
            </value>
            <value>
                <fullName>Online Form - Vetted</fullName>
            </value>
            <value>
                <fullName>Avalara Lead</fullName>
            </value>
            <value>
                <fullName>Online Form - Unvetted</fullName>
            </value>
            <value>
                <fullName>Reached $2000</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>