force-app/main/default/objects/Account/fields/Platinum_Requested_Date__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Requested_Date__c</fullName>
    <label>Platinum Requested Date</label>
    <type>DateTime</type>
</CustomField>