force-app/main/default/objects/Account/fields/Platinum_Stars__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Stars__c</fullName>
    <formula>IF( ISPICKVAL(  Discount_Level__c , &apos;5 Star&apos;) ,IMAGE(&quot;/img/samples/stars_500.gif&quot;, &quot;5 stars&quot;),
IF(ISPICKVAL( Discount_Level__c , &apos;4 Star&apos;),IMAGE(&quot;/img/samples/stars_400.gif&quot;, &quot;4 stars&quot;),
IF(ISPICKVAL( Discount_Level__c , &apos;3 Star&apos;),IMAGE(&quot;/img/samples/stars_300.gif&quot;, &quot;3 stars&quot;),IMAGE(&quot;/img/samples/stars_000.gif&quot;,&quot;0 stars&quot;))))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Platinum Stars</label>
    <type>Text</type>
</CustomField>