force-app/main/default/objects/Account/fields/Platinum_Status__c.field-meta.xml
<CustomField>
    <fullName>Platinum_Status__c</fullName>
    <label>Platinum Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Star</fullName>
            </value>
            <value>
                <fullName>Bead Shop</fullName>
            </value>
            <value>
                <fullName>Bead Buying Group</fullName>
            </value>
            <value>
                <fullName>Distributor</fullName>
                <isActive>false</isActive>
                <label>Distributor</label>
            </value>
            <value>
                <fullName>Teacher</fullName>
                <isActive>false</isActive>
                <label>Teacher</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>