force-app/main/default/objects/Account/fields/PlatinumPriorPeriod__c.field-meta.xml
<CustomField>
    <fullName>PlatinumPriorPeriod__c</fullName>
    <label>Prior Yr Plan $</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>