force-app/main/default/objects/Account/fields/Post_Platinum__c.field-meta.xml
<CustomField>
    <fullName>Post_Platinum__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post Platinum</label>
    <type>Checkbox</type>
</CustomField>