force-app/main/default/objects/Account/fields/Postal_Address_Invalid__c.field-meta.xml
<CustomField>
    <fullName>Postal_Address_Invalid__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Postal Address Invalid</label>
    <type>Checkbox</type>
</CustomField>