force-app/main/default/objects/Account/fields/Previous_Discount_Level__c.field-meta.xml
<CustomField>
    <fullName>Previous_Discount_Level__c</fullName>
    <label>Previous Discount Level</label>
    <length>255</length>
    <type>Text</type>
</CustomField>