force-app/main/default/objects/Account/fields/Regular_Customer_Contact_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Regular_Customer_Contact_Due_Date__c</fullName>
    <defaultValue>TODAY()</defaultValue>
    <label>Regular Customer Contact Due Date</label>
    <type>Date</type>
</CustomField>