force-app/main/default/objects/Account/fields/RepFullName__c.field-meta.xml
<CustomField>
    <fullName>RepFullName__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rep Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>