force-app/main/default/objects/Account/fields/rstk__IndexedAccountNumber__c.field-meta.xml
<CustomField>
    <fullName>rstk__IndexedAccountNumber__c</fullName>
    <externalId>true</externalId>
    <label>Indexed Account Number</label>
    <length>40</length>
    <type>Text</type>
</CustomField>