force-app/main/default/objects/Account/fields/rstk__NumberofLocations__c.field-meta.xml
<CustomField>
    <fullName>rstk__NumberofLocations__c</fullName>
    <inlineHelpText>The number of physical Locations for this SF Account.</inlineHelpText>
    <label>Number of Locations</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>