force-app/main/default/objects/Account/fields/rstk__Rootstock_Socust__c.field-meta.xml
<CustomField>
    <fullName>rstk__Rootstock_Socust__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Rootstock Customer Master</label>
    <referenceTo>rstk__socust__c</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>