force-app/main/default/objects/Account/fields/rstk__Rootstock_Vendor__c.field-meta.xml
<CustomField>
    <fullName>rstk__Rootstock_Vendor__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>When checked, indicates that there is a corresponding Rootstock Vendor Master record associated with this Salesforce Account.</inlineHelpText>
    <label>Rootstock Vendor</label>
    <type>Checkbox</type>
</CustomField>