force-app/main/default/objects/Account/fields/rstk__SLAExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>rstk__SLAExpirationDate__c</fullName>
    <inlineHelpText>The date the specified SLA expires.</inlineHelpText>
    <label>SLA Expiration Date</label>
    <type>Date</type>
</CustomField>