force-app/main/default/objects/Account/fields/rstk__SLASerialNumber__c.field-meta.xml
<CustomField>
    <fullName>rstk__SLASerialNumber__c</fullName>
    <inlineHelpText>The serial number associated with the specified SLA.</inlineHelpText>
    <label>SLA Serial Number</label>
    <length>10</length>
    <type>Text</type>
</CustomField>